--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
               width="900"
               height="200"
               class="resize-img"
+              alt="dishOne"
             />
           </p>
           <p>
@@ -48,7 +49,8 @@
             well as mobile applications.
           </p>
           <p>
-            <img src="images/300x200.jpg" class="left-float" />Lorem ipsum dolor
+            <img src="images/300x200.jpg" class="left-float" alt="300x200" />
+            Lorem ipsum dolor
             sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -68,7 +70,7 @@
           </p>
         </section>
         <div class="sidebar">
-          <p><img src="images/square200px.png" /></p>
+          <p><img src="images/square200px.png" alt="square200px" /></p>
           <h2>Contact Details</h2>
           <address>My Address</address>
           <p>
