--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
+      content="width=device-width, initial-scale=1, maximum-scale=1.0"
     />
-    <title></title>
+    <title>Ethan Morrison</title>
     <link rel="stylesheet" href="styles/mobile.css" />
     <link
       rel="stylesheet"
