--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <header>
         <div id="logo">
-          <a href="#">Martin</a>
+          <a href="#">Ethan</a>
         </div>
         <nav>
           <ul>
