--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <header>
         <div id="logo">
-          <a href="#">Ethan</a>
+          <h1><a href="index.html">Ethan Morrison</a></h1>
         </div>
         <nav>
           <ul>
